--- a/force-app/main/default/lwc/testeEvery/testeEvery.html
+++ b/force-app/main/default/lwc/testeEvery/testeEvery.html
@@ -30,6 +30,19 @@
                                     </tr>
                             </template>   
                         </tbody>
+                        <tfoot>
+                            <tr>
+                                <Td>
+                                    Total: 
+                                </Td>
+                                <td>
+                                {totalQuant}
+                                </td>
+                                <td>
+                                {totalPreco}
+                                </td>
+                            </tr>
+                        </tfoot>
                     </table>
                 </div>
                 </div>
